# part1-progect1

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cmake-single-platform.yml  docker-image.yml  push-to-hub.yml
src/: AddURL.cpp  AddURL.h  ArgsHandler.cpp  ArgsHandler.h  BloomFilter.cpp  BloomFilter.h  CreateBloomFilter.cpp  CreateBloomFiter.h  FalsePositive.cpp  FalsePositive.h  Flow.cpp  Flow.h  HashGenerator.cpp  ICommand.cpp  ICommand.h  IExecutable.h  InputHandler.cpp  InputHandler.h  IsBlackListed.cpp  IsBlackListed.h  URLsHandler.cpp  URLsHandler.h  bloom_filter.cpp  calc.cpp  check_input.cpp  edit_string.cpp  false_positive.cpp  false_positive.h  get_input.cpp  main  main.cpp  main_1.1  main_1.1.cpp  mainofinput  mainofinput.cpp  sockets.cpp  sockets.h  string.cpp
src/check_in_filter.cpp/: .h
src/create_filter.cpp/: .h
src/draft_or_not_work/: HashGenerator.cpp
src/test hash/: hash1  hash1.cpp  url test
src/version0/: BloomFilter.cpp  BloomFilter.h  InputHandler.cpp  InputHandler.h  mainofinput  mainofinput.cpp
src/version1/: ArgsHandler.h  BloomFilter1.cpp  BloomFilter1.h  HashGenerator.cpp  URLsHandler.cpp  URLsHandler.h  hash_class  hash_class.cpp  main_1.1.cpp
src/version2/: AddURL.cpp  AddURL.h  ArgsHandler.h  ArgsHandler1.cpp  ArgsHandler1.h  (+22 more)
tests/: basic_tests.cpp  bloom0_test.cpp  bloom_test.cpp  calc_test.cpp  falsepositive_test.cpp  test_BloomFilter.cpp  test_FalsePositive.cpp  test_PrintRealArgs.cpp  test_add_url.cpp  test_bloom0.cpp  test_hash.cpp  test_main.cpp  test_readSizeAndArgs.cpp  test_string.cpp  test_url_v2.cpp
(+12 files in other folders)
